[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = ""
authors = ["Awinja-j <ingari61@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
pytest = "^6.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
